images all aligned correctly and styling of location section started

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,7 @@ h2 {
     text-transform: uppercase;
 }
 
-h3 {
-    font-size: 30px;
-    font-weight: 500;
-}
+
 /* --------------------------------------Colours Section */
 
 .btn {
@@ -77,7 +74,24 @@ h3 {
     margin: 30px;
 }
 
+/* --------------------------------------Images Section */
 
+.images-container {
+    margin-top: 30px;
+    margin-bottom: 100px;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.images-row {
+    margin: 0;
+}
+
+.col-sm {
+    padding: 0;
+
+}
 /* -------------------------------------------Media Queries */
 
 @media (max-width: 480px) {
